[gd_scene load_steps=2 format=3 uid="uid://c3vm8kqp2vnhz"]

[ext_resource type="Script" path="res://scripts/ui/GOAPStatsUI.gd" id="1_stats_ui"]

[node name="GOAPStatsUI" type="CanvasLayer"]
script = ExtResource("1_stats_ui")

[node name="Panel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 410.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "GOAP AGENT DEBUG"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "=== STATS ===
Level: 1
Experience: 0 / 200
Health: 10 / 10
Hunger: 0 / 100
Wood: 0"

[node name="PlanLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "=== CURRENT PLAN ===
Goal: None
Action: None"

[node name="WorldStateLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "=== WORLD STATE ===
Loading..."
